# tracewhy

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.quality  README.md  SECURITY.md  SUPPORT.md  package.json  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
apps/cli/: package.json
apps/web/: next.config.ts  package.json  tsconfig.json
crates/trace-core/: Cargo.toml
crates/trace-core/src/: bundle.rs  compare.rs  fs_security.rs  lib.rs  main.rs  model.rs  normalize.rs  parser.rs
demos/: README.md  compare-and-verify.sh  run-all.sh  verify.ts
demos/child-failure/: child-worker.c  expected.json  run.sh  supervisor.c
demos/missing-config/: config-preflight.c  expected.json  media-worker.c  run.sh  worker.toml
demos/permission-denied/: expected.json  locked.txt  permission-reader.c  run.sh
demos/shared-library/: Makefile  demo.c  expected.json  libdemo.c  run.sh
demos/wrong-executable/: expected.json  run.sh
demos/wrong-working-directory/: config-reader.c  expected.json  run.sh
docs/: commands.md  how-it-works.md  platform-support.md  privacy.md  releasing.md  troubleshooting.md
npm/tracewhy/: README.md  package.json
scripts/: build-cli.ts  build-showcase-suite.ts  check-npm-readme.ts  check-versions.ts  install.sh  package-release.sh  stage-core.ts  stage-web.ts  verify-linux.sh  verify-portable.ts  verify-production-limits.sh  verify-release.sh
(+25 files in other folders)
