[package]
name = "trace-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Deterministic strace parser and comparison engine for TraceWhy"

[[bin]]
name = "tracewhy-trace-core"
path = "src/main.rs"

[dependencies]
flate2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4"
